--- a/presentation/pubspec.yaml
+++ b/presentation/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   go_router: ^6.4.0
   flutter_map: ^3.1.0
   flutter_multi_formatter: ^2.10.2
+  mask_text_input_formatter: ^2.4.0
 
 dev_dependencies:
   flutter_test:
